# rules_spicedb

./: BUILD.bazel  CLAUDE.md  DESIGN.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extensions.bzl  repositories.bzl
.github/workflows/: ci.yml
private/: binary.bzl  install.bzl  launcher.py  relationships.bzl  schema.bzl  server.bzl  test.bzl
private/manifests/: BUILD.bazel  spicedb_operator.yaml
tests/: BUILD.bazel  platform_access_test.sh  schema_smoke_test.sh  seed_smoke_test.sh  spicedb_health_check_test.sh  spicedb_server_test.sh
tests/install_smoke/: BUILD.bazel  cluster.yaml  health_wrapper.sh  install_wrapper.sh  schema.zed  smoke_test.sh
tests/schema/: example.zed  platform.zed
tests/seed/: platform.txt  relationships.txt
toolchain/: toolchain.bzl
tools/: BUILD.bazel  render_spicedb_operator.sh  versions.bzl
