load("//private:binary.bzl", "spicedb_binary_files", "spicedb_binary")

# ---------------------------------------------------------------------------
# Platform config_settings
# ---------------------------------------------------------------------------

config_setting(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "darwin_amd64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

# ---------------------------------------------------------------------------
# spicedb 1.30 binary targets
# ---------------------------------------------------------------------------

spicedb_binary_files(
    name    = "spicedb_1_30_linux_amd64_files",
    version = "1.30",
    bins = [
        "@spicedb_1_30_linux_amd64//:spicedb_bin",
        "@spicedb_1_30_linux_amd64//:zed_bin",
    ],
    visibility = ["//visibility:private"],
)

spicedb_binary_files(
    name    = "spicedb_1_30_darwin_arm64_files",
    version = "1.30",
    bins = [
        "@spicedb_1_30_darwin_arm64//:spicedb_bin",
        "@spicedb_1_30_darwin_arm64//:zed_bin",
    ],
    visibility = ["//visibility:private"],
)

spicedb_binary_files(
    name    = "spicedb_1_30_darwin_amd64_files",
    version = "1.30",
    bins = [
        "@spicedb_1_30_darwin_amd64//:spicedb_bin",
        "@spicedb_1_30_darwin_amd64//:zed_bin",
    ],
    visibility = ["//visibility:private"],
)

spicedb_binary(
    name    = "spicedb_1_30",
    version = "1.30",
    binary  = select({
        ":linux_amd64":  ":spicedb_1_30_linux_amd64_files",
        ":darwin_arm64": ":spicedb_1_30_darwin_arm64_files",
        ":darwin_amd64": ":spicedb_1_30_darwin_amd64_files",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name       = "spicedb_default",
    actual     = ":spicedb_1_30",
    visibility = ["//visibility:public"],
)
