module(
    name = "rules_spicedb",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.9")

spicedb = use_extension("//:extensions.bzl", "spicedb")
spicedb.system(versions = ["1.30"])
use_repo(spicedb,
    "spicedb_1_30_linux_amd64",
    "spicedb_1_30_darwin_arm64",
    "spicedb_1_30_darwin_amd64",
)
