module(
    name = "rules_spicedb",
    version = "0.1.1",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.9")

# rules_shell is part of the public surface — `spicedb_test`
# defaults to `sh_test`. Bazel 8+ removed `native.sh_test`, so the
# macro has to import it from rules_shell. Consumers transitively
# need rules_shell unless they override `test_rule = ...` to
# something else.
bazel_dep(name = "rules_shell", version = "0.8.0")

spicedb = use_extension("//:extensions.bzl", "spicedb")
spicedb.system(versions = ["1.30"])
use_repo(spicedb,
    "spicedb_1_30_linux_amd64",
    "spicedb_1_30_darwin_arm64",
    "spicedb_1_30_darwin_amd64",
)
