"""End-to-end install smoke for spicedb_install / spicedb_install_health_check.

Composition: kind cluster + spicedb-operator install + a memory-backed
SpiceDBCluster + zed-pod-driven schema write + permission check.
"""

load("@rules_itest//:itest.bzl", "itest_service", "service_test")
load("@rules_kind//:defs.bzl", "kind_cluster", "kind_health_check")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@rules_spicedb//:defs.bzl", "spicedb_install", "spicedb_install_health_check")

kind_cluster(name = "cluster", k8s_version = "1.32")

kind_health_check(name = "cluster_health", cluster = ":cluster")

itest_service(
    name = "kind_svc",
    exe = ":cluster",
    health_check = ":cluster_health",
    tags = ["manual"],
)

spicedb_install(
    name = "spicedb_install_bin",
    tags = ["manual"],
)

spicedb_install_health_check(
    name = "spicedb_install_health_bin",
    tags = ["manual"],
)

sh_binary(
    name = "spicedb_install_wrapper",
    srcs = ["install_wrapper.sh"],
    data = [":spicedb_install_bin"],
)

sh_binary(
    name = "spicedb_install_health_wrapper",
    srcs = ["health_wrapper.sh"],
    data = [":spicedb_install_health_bin"],
)

itest_service(
    name = "spicedb_install_svc",
    exe = ":spicedb_install_wrapper",
    deps = [":kind_svc"],
    health_check = ":spicedb_install_health_wrapper",
    tags = ["manual"],
)

sh_test(
    name = "smoke_test_bin",
    srcs = ["smoke_test.sh"],
    data = [
        "cluster.yaml",
        "schema.zed",
    ],
    tags = ["manual"],
)

service_test(
    name = "smoke_test",
    services = [":spicedb_install_svc"],
    test = ":smoke_test_bin",
    tags = [
        "manual",
        "no-sandbox",
        "requires-network",
    ],
)
